<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/settings" android:title="@string/settings_label"
      android:icon="@android:drawable/ic_menu_preferences" android:alphabeticShortcut="s" />
   <item android:id="@+id/about" android:title="@string/about_label"
      android:icon="@android:drawable/ic_menu_info_details" android:alphabeticShortcut="a" />
   <item android:id="@+id/help" android:title="@string/help_label"
      android:icon="@android:drawable/ic_menu_help" android:alphabeticShortcut="h" />
   <item android:id="@+id/walkthrough" android:title="@string/walkthrough_label"
      android:icon="@android:drawable/ic_menu_directions" android:alphabeticShortcut="w" />
   <item android:id="@+id/bugs" android:title="@string/bugs_label"
      android:icon="@android:drawable/ic_menu_send" android:alphabeticShortcut="b" />
</menu>
