<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <ImageView
      android:id="@+id/cctv"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:src="@drawable/cctv" />
  <TextView
      android:id="@+id/cctv_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_step_1_text"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/cctv"
      android:layout_marginLeft="10dp"/>
      android:layout_marginRight="10dp"/>
      android:layout_marginTop="10dp"/>
  <ImageView
      android:id="@+id/ballface"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:layout_below="@+id/cctv_text"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:src="@drawable/ballface" />
  <TextView
      android:id="@+id/ballface_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_step_2_text"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ballface"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"/>
  <ImageView
      android:id="@+id/thief"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:scaleType="fitCenter"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="10dp"
      android:adjustViewBounds="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ballface_text"
      android:src="@drawable/thief" />
  <TextView
      android:id="@+id/step_3_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_step_3_text"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/thief"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"/>
  <Button
      android:id="@+id/setup_button"
      android:text="@string/setup_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/step_3_text"
      android:layout_marginTop="10dp"
      android:onClick="onSetupClicked" />
</RelativeLayout>
